TestStringIntrinsicRangeChecks fails w/ No exception thrown for compressByte/inflateByte

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b131

      compiler/intrinsics/string/TestStringIntrinsicRangeChecks.java fail on x86 w/ -XX:-TieredCompilation


      #section:main
      ----------messages:(4/259)----------
      command: main compiler.intrinsics.string.TestStringIntrinsicRangeChecks
      reason: User specified action: run main compiler.intrinsics.string.TestStringIntrinsicRangeChecks
      Mode: othervm [test or library overrides a system module]
      elapsed time (seconds): 6.813
      ----------configuration:(3/115)----------
      Boot Layer
        patch: java.base /scratch/home/aurora/sandbox/results/workDir/classes/14/compiler/patches/java.base

      ----------System.out:(0/0)----------
      ----------System.err:(14/1153)----------
      java.lang.RuntimeException: No exception thrown for compressByte([B@260df44e, 9, 16, 6, 0)
      at compiler.intrinsics.string.TestStringIntrinsicRangeChecks.check(TestStringIntrinsicRangeChecks.java:77)
      at compiler.intrinsics.string.TestStringIntrinsicRangeChecks.main(TestStringIntrinsicRangeChecks.java:102)
      at jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(java.base@9-internal/Native Method)
      at jdk.internal.reflect.NativeMethodAccessorImpl.invoke(java.base@9-internal/NativeMethodAccessorImpl.java:62)
      at jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(java.base@9-internal/DelegatingMethodAccessorImpl.java:43)
      at java.lang.reflect.Method.invoke(java.base@9-internal/Method.java:531)
      at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:110)
      at java.lang.Thread.run(java.base@9-internal/Thread.java:843)

      JavaTest Message: Test threw exception: java.lang.RuntimeException: No exception thrown for compressByte([B@260df44e, 9, 16, 6, 0)
      JavaTest Message: shutting down test

            Assignee:
            Tobias Hartmann
            Reporter:
            Igor Ignatyev (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: