8159129: TestStringIntrinsicRangeChecks fails w/ No exception thrown for compressByte/inflateByte

Need to convert char offsets to byte offsets before range check.

Reviewed-by: vlivanov